--- a/blog.html
+++ b/blog.html
@@ -211,7 +211,7 @@
                       ></a>
                     </div>
                     <div class="category-wrap">
-                      <a href="#" class="blog-category">ONLINE</a>
+                      <a href="#" class="blog-category">event</a>
                     </div>
                     <h5 class="title">
                       <a href="blog-details.html"
@@ -220,7 +220,7 @@
                     </h5>
                     <ul class="blog-meta">
                       <li><i class="icon-27"></i>Oct 10, 2021</li>
-                      <li><i class="icon-28"></i>Com 09</li>
+                      <li><i class="icon-28"></i>admin</li>
                     </ul>
                     <p>
                       Lorem ipsum dolor sit amet cons tetur adipisicing sed.
